; ModuleID = '/home/carl/AnghaBench/RetroArch/griffin/extr_..taskstask_content.c_task_push_load_content_with_core_from_menu.c'
source_filename = "/home/carl/AnghaBench/RetroArch/griffin/extr_..taskstask_content.c_task_push_load_content_with_core_from_menu.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RARCH_PATH_CONTENT = common dso_local global i32 0, align 4
@CORE_TYPE_DUMMY = common dso_local global i32 0, align 4
@RARCH_MENU_CTL_SET_PENDING_QUICK_MENU = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @task_push_load_content_with_core_from_menu(i8* %0, i32* %1, i32 %2, i32 %3, i8* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i8*, align 8
  store i8* %0, i8** %7, align 8
  store i32* %1, i32** %8, align 8
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i8* %4, i8** %11, align 8
  %12 = load i32, i32* @RARCH_PATH_CONTENT, align 4
  %13 = load i8*, i8** %7, align 8
  %14 = call i32 @path_set(i32 %12, i8* %13)
  %15 = load i32*, i32** %8, align 8
  %16 = call i32 @task_load_content_callback(i32* %15, i32 1, i32 0)
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %20, label %18

18:                                               ; preds = %5
  %19 = call i32 (...) @retroarch_menu_running()
  store i32 0, i32* %6, align 4
  br label %21

20:                                               ; preds = %5
  store i32 1, i32* %6, align 4
  br label %21

21:                                               ; preds = %20, %18
  %22 = load i32, i32* %6, align 4
  ret i32 %22
}

declare dso_local i32 @path_set(i32, i8*) #1

declare dso_local i32 @task_load_content_callback(i32*, i32, i32) #1

declare dso_local i32 @retroarch_menu_running(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
